# django-playground

./: .gitignore  README.md  pyproject.toml
classic_demo/: manage.py
classic_demo/classic_demo/: asgi.py  settings.py  urls.py  wsgi.py
drf_demo/drf_demo/: asgi.py  settings.py  urls.py  wsgi.py
ninja_demo/: manage.py
ninja_demo/ninja_demo/: asgi.py  settings.py  urls.py  wsgi.py
